# atoms-demo

./: .gitignore  readme.md  第二阶段实现方案.md
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agents/: graph.py  nodes.py  state.py
backend/app/api/: deps.py
backend/app/api/routes/: admin.py  agent.py  apps.py  auth.py  billing.py  discovery.py  gallery.py  media_artworks.py  payments.py  sandbox.py  tasks.py  ws.py
backend/app/core/: audit.py  config.py  rate_limit.py  security.py  telemetry.py
backend/app/db/: session.py
backend/app/models/: entities.py
backend/app/models/db/: __init__.py  agent_session.py  audit_log.py  billing.py  community.py  generated_app.py  generated_app_file.py  media_artwork.py  task.py  user.py
backend/app/repositories/: admin.py  agent_sessions.py  billing.py  community.py  generated_app_files.py  generated_apps.py  media_artworks.py  tasks.py  users.py
backend/app/schemas/: admin.py  agent.py  apps.py  auth.py  events.py  gallery.py  media_artworks.py  tasks.py
backend/app/services/: agent_service.py  app_service.py  auth_service.py  billing_service.py  codegen_service.py  embedding_service.py  llm_service.py  media_artwork_service.py  repository.py  sandbox_service.py  storage_service.py  task_runner.py  task_service.py  vector_service.py
backend/app/services/media/: image_provider.py  music_provider.py
backend/app/services/payment/: alipay_provider.py  base.py  stripe_provider.py  wechat_provider.py
backend/app/workers/: celery_app.py  tasks.py
backend/atoms_demo_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/migrations/: env.py
backend/migrations/versions/: 0001_create_core_tables.py  0002_task_params.py  0003_generated_app_files.py  0004_community.py  0005_billing.py  0006_media_artworks.py
docs/: implementation-plan.md
(+63 files in other folders)
