[project]
name = "atoms-demo-backend"
version = "0.1.0"
description = "FastAPI backend skeleton for the Atoms AI creation platform."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.4.0",
  "email-validator>=2.2.0",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "bcrypt<4.1",
  "sqlalchemy[asyncio]>=2.0.0",
  "asyncpg>=0.29.0",
  "alembic>=1.13.0",
  "httpx>=0.27.0",
  "langgraph>=0.2.0",
  "celery[redis]>=5.4.0",
  "redis>=5.0.0",
  "minio>=7.2.0",
  "docker>=7.1.0",
  "qdrant-client>=1.11.0",
  "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.0",
]
# Optional integrations enabled per deployment. Install with: pip install -e ".[payments]"
payments = [
  "stripe>=10.0.0",
]
observability = [
  "prometheus-fastapi-instrumentator>=7.0.0",
  "opentelemetry-sdk>=1.27.0",
  "opentelemetry-instrumentation-fastapi>=0.48b0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.setuptools.packages.find]
include = ["app*"]
